--- a/.github/workflows/database-test.yml
+++ b/.github/workflows/database-test.yml
@@ -39,4 +39,4 @@ jobs:
           if [ -f server/src/database-schema/requirements.txt ]; then pip install -r server/src/database-schema/requirements.txt; fi
 
       - name: Run tests
-        run: cd server/src/database-schema && python -m unittest discover -s tests -p "*_test.py"
+        run: cd server && python -m unittest discover -s tests -p "*_test.py"
