--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,11 +32,18 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-              
+      
+      - name: Create virtual environment
+        run: |
+          python -m venv ./server/src/.venv
+          source ./server/src/.venv/bin/activate
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f server/src/database-schema/requirements.txt ]; then pip install -r server/src/database-schema/requirements.txt; fi
+          if [ -f server/src/requirements.txt ]; then pip install -r server/src/requirements.txt; fi
 
       - name: Run tests
-        run: cd server && python -m unittest discover -s tests -p "*_test.py"
+        run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)/server/src/
+          python -m unittest discover -s ./server/tests -p "*_test.py"
