--- a/server/src/requirements.txt
+++ b/server/src/requirements.txt
@@ -1,8 +1,12 @@
+aiohappyeyeballs==2.4.4
 aiohttp==3.10.11
 aiosignal==1.3.1
+aiosql==9.0
 aiosqlite==0.19.0
+asgiref==3.8.1
 async-timeout==4.0.3
 asyncio==3.4.3
+asyncpg==0.30.0
 attrs==23.1.0
 Authlib==1.3.1
 blinker==1.6.3
@@ -14,25 +18,31 @@ colorama==0.4.6
 cryptography==43.0.1
 discord==2.3.2
 discord.py==2.3.2
+emoji==2.14.1
 ffmpeg-python==0.2.0
 Flask==3.0.0
+flask[asyncio]==3.0.0
 frozenlist==1.4.0
 future==0.18.3
+greenlet==3.1.1
 idna==3.7
 imageio-ffmpeg==0.4.9
 itsdangerous==2.1.2
 Jinja2==3.1.5
 MarkupSafe==2.1.3
 multidict==6.0.4
-nest-asyncio==1.5.8
+nest-asyncio==1.5.3
 numpy==1.26.2
+psycopg2==2.9.10
 pycord==0.1.1
 pycparser==2.21
+python-decouple==3.8
 requests==2.32.0
 setuptools==70.0.0
+SQLAlchemy==2.0.37
 srcomapi==0.3.3
+twitch-chat-irc==0.0.4
+typing_extensions==4.12.2
 urllib3==2.2.2
 Werkzeug==3.0.6
 yarl==1.12.0
-aiosql==9.0
-twitch-chat-irc==0.0.4
