Update python-app.yml for sqlfluff

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,14 +34,8 @@ jobs:
         flake8 . --count --exit-zero --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Lint queries.sql
-      run: |
-        # install sqlfluff
-        python -m pip install sqlfluff==2.3.5
-        # run tests using .sqlfluff as config
-        sqlfluff lint server/src/queries.sql --config .sqlfluff --exclude-rules CP02,AM04,RF02 --dialect sqlite
     - name: Lint schema.sql
       run: |
         # now schema.sql
-        sqlfluff lint server/src/schema.sql --config .sqlfluff --exclude-rules CP02,AM04 --dialect sqlite
+        sqlfluff lint --dialect postgres server/src/database-schema/schema.sql
 
