--- a/server/src/requirements.txt
+++ b/server/src/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==24.1.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.10.11
 aiosignal==1.3.1
@@ -21,10 +22,14 @@ discord.py==2.3.2
 emoji==2.14.1
 ffmpeg-python==0.2.0
 Flask==3.0.0
-flask[asyncio]==3.0.0
 frozenlist==1.4.0
 future==0.18.3
 greenlet==3.1.1
+h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
+Hypercorn==0.17.3
+hyperframe==6.1.0
 idna==3.7
 imageio-ffmpeg==0.4.9
 itsdangerous==2.1.2
@@ -33,16 +38,19 @@ MarkupSafe==2.1.3
 multidict==6.0.4
 nest-asyncio==1.5.3
 numpy==1.26.2
-psycopg2==2.9.10
+priority==2.0.0
+psycopg2-binary==2.9.10
 pycord==0.1.1
 pycparser==2.21
 python-decouple==3.8
+Quart==0.20.0
+quart-cors==0.8.0
 requests==2.32.0
-setuptools==70.0.0
 SQLAlchemy==2.0.37
 srcomapi==0.3.3
 twitch-chat-irc==0.0.4
 typing_extensions==4.12.2
 urllib3==2.2.2
 Werkzeug==3.0.6
+wsproto==1.2.0
 yarl==1.12.0
