--- a/server/src/docker-compose.yml
+++ b/server/src/docker-compose.yml
@@ -1,7 +1,5 @@
-version: '3.8'
 services:
   postgres:
-    container_name: postgres-database
     image: postgres
     environment:
       POSTGRES_PASSWORD: postgres
@@ -19,16 +17,19 @@ services:
       retries: 5
 
   descenders-modkit:
-    container_name: backend
     build: .
     ports:
       - "8082:8082"
       - "65432:65432"
     depends_on:
       - postgres
+    environment:
+      - POSTGRES_HOST=postgres:5432
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+      - POSTGRES_PASSWORD=postgres
   
   vuejs:
-    container_name: vuejs
     build: ../../vuetify-project
     ports:
       - "801:80"
