--- a/server/src/requirements.txt
+++ b/server/src/requirements.txt
@@ -18,7 +18,7 @@ click==8.1.7
 colorama==0.4.6
 cryptography==43.0.1
 discord==2.3.2
-discord.py==2.3.2
+discord.py==2.4.0
 emoji==2.14.1
 ffmpeg-python==0.2.0
 Flask==3.0.0
@@ -54,3 +54,5 @@ urllib3==2.2.2
 Werkzeug==3.0.6
 wsproto==1.2.0
 yarl==1.12.0
+python-dotenv==1.0.1
+hypercorn==0.17.3
