--- a/server/src/docker-compose.yml
+++ b/server/src/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       retries: 5
 
   descenders-modkit:
+    container_name: modkit
     build: .
     ports:
       - "8082:8082"
@@ -30,6 +31,7 @@ services:
       - POSTGRES_PASSWORD=postgres
   
   vuejs:
+    container_name: vuejs
     build: ../../vuetify-project
     ports:
       - "801:80"
