--- a/mod-loader/mod-loader-solution/ModLoaderSolution.csproj
+++ b/mod-loader/mod-loader-solution/ModLoaderSolution.csproj
@@ -52,47 +52,49 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AssetBundling.cs" />
-    <Compile Include="BikeSwitcher.cs" />
-    <Compile Include="ButtonHack.cs" />
-    <Compile Include="CustomDiscordManager.cs" />
-    <Compile Include="FollowCamSystem.cs" />
-    <Compile Include="Init.cs" />
-    <Compile Include="Loader.cs" />
-    <Compile Include="MethodAnalysis.cs" />
-    <Compile Include="Modifiers\CameraModifier.cs" />
-    <Compile Include="Modifiers\FovModifier.cs" />
-    <Compile Include="Modifiers\GimbalCam.cs" />
-    <Compile Include="Modifiers\MovableCam.cs" />
-    <Compile Include="Modifiers\RainbowLight.cs" />
-    <Compile Include="Modifiers\RemoveTerrainBoundaries.cs" />
-    <Compile Include="Modifiers\SlipModifier.cs" />
-    <Compile Include="Modifiers\StatsModification.cs" />
-    <Compile Include="Modifiers\TimeModifier.cs" />
-    <Compile Include="NetClient.cs" />
-    <Compile Include="ObfuscationHandler.cs" />
-    <Compile Include="ObjEnabler.cs" />
-    <Compile Include="PlayerManagement.cs" />
-    <Compile Include="RidersGate.cs" />
-    <Compile Include="SloMoZone.cs" />
-    <Compile Include="Speedtrap\SpeedTrap.cs" />
-    <Compile Include="Speedtrap\SpeedTrapInfo.cs" />
-    <Compile Include="SwitchBikeOnEnter.cs" />
-    <Compile Include="TeleportAtCursor.cs" />
-    <Compile Include="TimerCopier.cs" />
-    <Compile Include="Timer\Boundary.cs" />
-    <Compile Include="Timer\Checkpoint.cs" />
-    <Compile Include="Timer\LeaderboardInfo.cs" />
-    <Compile Include="Timer\MedalSystem.cs" />
-    <Compile Include="Timer\SplitTimerText.cs" />
-    <Compile Include="Timer\ThreeDTimer.cs" />
-    <Compile Include="Timer\Trail.cs" />
-    <Compile Include="TrickCapturer.cs" />
-    <Compile Include="UserInterface.cs" />
-    <Compile Include="Utilities.cs" />
-    <Compile Include="Utilities\SteamIntegration.cs" />
+    <Compile Include="src\AssetBundling.cs" />
+    <Compile Include="src\BikeSwitcher.cs" />
+    <Compile Include="src\ButtonHack.cs" />
+    <Compile Include="src\CustomDiscordManager.cs" />
+    <Compile Include="src\FollowCamSystem.cs" />
+    <Compile Include="src\Init.cs" />
+    <Compile Include="src\Loader.cs" />
+    <Compile Include="src\MethodAnalysis.cs" />
+    <Compile Include="src\Modifiers\CameraModifier.cs" />
+    <Compile Include="src\Modifiers\FovModifier.cs" />
+    <Compile Include="src\Modifiers\GimbalCam.cs" />
+    <Compile Include="src\Modifiers\MovableCam.cs" />
+    <Compile Include="src\Modifiers\RainbowLight.cs" />
+    <Compile Include="src\Modifiers\RemoveTerrainBoundaries.cs" />
+    <Compile Include="src\Modifiers\SlipModifier.cs" />
+    <Compile Include="src\Modifiers\StatsModification.cs" />
+    <Compile Include="src\Modifiers\TimeModifier.cs" />
+    <Compile Include="src\NetClient.cs" />
+    <Compile Include="src\ObfuscationHandler.cs" />
+    <Compile Include="src\ObjEnabler.cs" />
+    <Compile Include="src\PlayerManagement.cs" />
+    <Compile Include="src\RidersGate.cs" />
+    <Compile Include="src\SloMoZone.cs" />
+    <Compile Include="src\Speedtrap\SpeedTrap.cs" />
+    <Compile Include="src\Speedtrap\SpeedTrapInfo.cs" />
+    <Compile Include="src\SwitchBikeOnEnter.cs" />
+    <Compile Include="src\TeleportAtCursor.cs" />
+    <Compile Include="src\TimerCopier.cs" />
+    <Compile Include="src\Timer\Boundary.cs" />
+    <Compile Include="src\Timer\Checkpoint.cs" />
+    <Compile Include="src\Timer\LeaderboardInfo.cs" />
+    <Compile Include="src\Timer\MedalSystem.cs" />
+    <Compile Include="src\Timer\SplitTimerText.cs" />
+    <Compile Include="src\Timer\ThreeDTimer.cs" />
+    <Compile Include="src\Timer\Trail.cs" />
+    <Compile Include="src\TrickCapturer.cs" />
+    <Compile Include="src\UserInterface.cs" />
+    <Compile Include="src\Utilities.cs" />
+    <Compile Include="src\Utilities\SteamIntegration.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="tests\" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
       <HintPath>libs\Assembly-CSharp.dll</HintPath>
