--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   postgres:
+    container_name: posgres
     image: postgres
     environment:
       POSTGRES_PASSWORD: postgres
@@ -16,11 +17,31 @@ services:
       timeout: 5s
       retries: 5
 
-  descenders-modkit:
-    container_name: modkit
-    build: .
+  web-api:
+    container_name: web-api
+    build:
+      context: .
+      dockerfile: web-api/Dockerfile
     ports:
       - "8082:8082"
+    depends_on:
+      - postgres
+    volumes:
+      - ./replays:/app/replays
+    environment:
+      - POSTGRES_HOST=postgres:5432
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+      - POSTGRES_PASSWORD=postgres
+    env_file:
+      - path: .env.private-tokens
+  
+  websocket-api:
+    container_name: websocket-api
+    build:
+      context: .
+      dockerfile: websocket-api/Dockerfile
+    ports:
       - "65432:65432"
     depends_on:
       - postgres
@@ -29,14 +50,17 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
       - POSTGRES_PASSWORD=postgres
-  
+    env_file:
+      - path: .env.private-tokens
+
   vuejs:
     container_name: vuejs
-    build: ../../vuetify-project
+    build: vuejs/
     ports:
       - "801:80"
     depends_on:
-      - descenders-modkit
+      - websocket-api
+      - web-api
 
 volumes:
   postgres_data:
