--- a/src/vuejs/package.json
+++ b/src/vuejs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "7.4.47",
     "roboto-fontface": "*",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.4.31",
     "vue-router": "^4.5.0",
     "vuetify": "^3.6.14"
