Add WebSocket support for dynamic data retrieval and updates; expose new port and update Vue.js socket handling

--- a/src/websocket-api/Dockerfile
+++ b/src/websocket-api/Dockerfile
@@ -20,5 +20,8 @@ COPY ./websocket-api .
 # expose websocket port
 EXPOSE 65432
 
+# expose vuejs websocket prot
+EXPOSE 40000
+
 # run application
 CMD ["python3", "-u", "main.py"]
