--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       - "40000:40000"
     depends_on:
       - postgres
+    volumes:
+      - ./replays:/app/replays
     env_file:
       - path: .env.private-tokens
 
