--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -7,11 +7,11 @@ on:
   push:
     branches: [ "dev" ]
     paths:
-      - 'mod-loader-solution/*'
+      - 'mod-loader/mod-loader-solution/*'
   pull_request:
     branches: [ "main", "dev" ]
     paths:
-      - 'mod-loader-solution/*'
+      - 'mod-loader/mod-loader-solution/*'
 
 jobs:
   build:
@@ -22,7 +22,7 @@ jobs:
       - name: Build DotNET35
         run: |
           cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
-          $output = & .\MSBuild.exe $Env:GITHUB_WORKSPACE\mod-loader-solution\ModLoaderSolution.sln /p:WarningsAsErrors=true /p:WarningLevel=4  /nologo /v:q
+          $output = & .\MSBuild.exe $Env:GITHUB_WORKSPACE\mod-loader\mod-loader-solution\ModLoaderSolution.sln /p:WarningsAsErrors=true /p:WarningLevel=4  /nologo /v:q
 
           # Print the output
           Write-Output $output
