--- a/.github/workflows/dotnet-release.yml
+++ b/.github/workflows/dotnet-release.yml
@@ -11,7 +11,7 @@ on:
       - main
     # and if mod-loader-solution is changed at all
     paths:
-      - 'mod-loader-solution/*'
+      - 'mod-loader/mod-loader-solution/*'
 jobs:
   build:
     runs-on: windows-2019
@@ -21,9 +21,9 @@ jobs:
       - name: Build Solution
         run: |
            cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
-           $warnings = .\MSBuild.exe $Env:GITHUB_WORKSPACE\mod-loader-solution\ModLoaderSolution.sln /p:WarningsAsErrors=false /p:WarningLevel=1  /nologo /v:q
+           $warnings = .\MSBuild.exe $Env:GITHUB_WORKSPACE\mod-loader\mod-loader-solution\ModLoaderSolution.sln /p:WarningsAsErrors=false /p:WarningLevel=1  /nologo /v:q
            if ($warnings -gt 0) { exit 1 }
-           mv $Env:GITHUB_WORKSPACE\mod-loader-solution\bin\Debug\ModLoaderSolution.dll $Env:GITHUB_WORKSPACE\ModLoaderSolution.bin
+           mv $Env:GITHUB_WORKSPACE\mod-loader\mod-loader-solution\bin\Debug\ModLoaderSolution.dll $Env:GITHUB_WORKSPACE\ModLoaderSolution.bin
       - name: Upload solution
         uses: actions/upload-artifact@v4
         with:
