Fix path in CodeQL workflow for mod-loader solution

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Build
       run: |
          cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
-         .\MSBuild.exe $Env:GITHUB_WORKSPACE\mod-loader-solution\ModLoaderSolution.sln /p:WarningsAsErrors=true /p:WarningLevel=4 /nologo /v:q
+         .\MSBuild.exe $Env:GITHUB_WORKSPACE\mod-loader\mod-loader-solution\ModLoaderSolution.sln /p:WarningsAsErrors=true /p:WarningLevel=4 /nologo /v:q
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
